# QLumEdit

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.opt
.qt/: QtDeploySupport.cmake
sources/: eulumdat.cpp  eulumdat.h  main.cpp  mainwindow.cpp  mainwindow.h
wasm/: QLumEdit.js
